[package]
name = "cuda-voxel-logic"
version = "0.1.0"
edition = "2021"
description = "3D spatial reasoning — A* pathfinding, CSG operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-voxel-logic"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
